// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nx/next/plugin integrated projects should create nodes 1`] = `
{
  "projects": {
    "my-app": {
      "root": "my-app",
      "targets": {
        "my-build": {
          "cache": true,
          "command": "next build",
          "dependsOn": [
            "^build",
          ],
          "inputs": [
            "default",
            "^production",
            {
              "externalDependencies": [
                "next",
              ],
            },
          ],
          "metadata": {
            "description": "Runs Next.js build",
            "help": {
              "command": "npx next build --help",
              "example": {
                "args": [
                  "--profile",
                  "--experimental-turbo",
                ],
              },
            },
            "technologies": [
              "nextjs",
            ],
          },
          "options": {
            "cwd": "my-app",
            "tty": false,
          },
          "outputs": [
            "{workspaceRoot}/my-app/.next",
            "{workspaceRoot}/my-app/.next/!(cache)",
          ],
        },
        "my-serve": {
          "command": "next dev",
          "metadata": {
            "description": "Starts Next.js dev server",
            "help": {
              "command": "npx next dev --help",
              "example": {
                "options": {
                  "port": 3000,
                },
              },
            },
            "technologies": [
              "nextjs",
            ],
          },
          "options": {
            "cwd": "my-app",
          },
        },
        "my-serve-static": {
          "executor": "@nx/web:file-server",
          "options": {
            "buildTarget": "my-build",
            "port": 3000,
            "spa": false,
            "staticFilePath": "{projectRoot}/out",
          },
        },
        "my-start": {
          "command": "next start",
          "dependsOn": [
            "my-build",
          ],
          "metadata": {
            "description": "Starts Next.js production server",
            "help": {
              "command": "npx next start --help",
              "example": {
                "options": {
                  "port": 3000,
                },
              },
            },
            "technologies": [
              "nextjs",
            ],
          },
          "options": {
            "cwd": "my-app",
          },
        },
      },
    },
  },
}
`;

exports[`@nx/next/plugin root projects should create nodes 1`] = `
{
  "projects": {
    ".": {
      "root": ".",
      "targets": {
        "build": {
          "cache": true,
          "command": "next build",
          "dependsOn": [
            "^build",
          ],
          "inputs": [
            "default",
            "^production",
            {
              "externalDependencies": [
                "next",
              ],
            },
          ],
          "metadata": {
            "description": "Runs Next.js build",
            "help": {
              "command": "npx next build --help",
              "example": {
                "args": [
                  "--profile",
                  "--experimental-turbo",
                ],
              },
            },
            "technologies": [
              "nextjs",
            ],
          },
          "options": {
            "cwd": ".",
            "tty": false,
          },
          "outputs": [
            "{projectRoot}/.next",
            "{projectRoot}/.next/!(cache)",
          ],
        },
        "dev": {
          "command": "next dev",
          "metadata": {
            "description": "Starts Next.js dev server",
            "help": {
              "command": "npx next dev --help",
              "example": {
                "options": {
                  "port": 3000,
                },
              },
            },
            "technologies": [
              "nextjs",
            ],
          },
          "options": {
            "cwd": ".",
          },
        },
        "serve-static": {
          "executor": "@nx/web:file-server",
          "options": {
            "buildTarget": "build",
            "port": 3000,
            "spa": false,
            "staticFilePath": "{projectRoot}/out",
          },
        },
        "start": {
          "command": "next start",
          "dependsOn": [
            "build",
          ],
          "metadata": {
            "description": "Starts Next.js production server",
            "help": {
              "command": "npx next start --help",
              "example": {
                "options": {
                  "port": 3000,
                },
              },
            },
            "technologies": [
              "nextjs",
            ],
          },
          "options": {
            "cwd": ".",
          },
        },
      },
    },
  },
}
`;
